; ModuleID = '/home/carl/AnghaBench/reactos/drivers/network/tcpip/tcpip/extr_dispatch.c_IRPFinish.c'
source_filename = "/home/carl/AnghaBench/reactos/drivers/network/tcpip/tcpip/extr_dispatch.c_IRPFinish.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_7__ = type { %struct.TYPE_6__ }
%struct.TYPE_6__ = type { i64 }

@STATUS_PENDING = common dso_local global i64 0, align 8
@IO_NETWORK_INCREMENT = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i64 @IRPFinish(%struct.TYPE_7__* %0, i64 %1) #0 {
  %3 = alloca %struct.TYPE_7__*, align 8
  %4 = alloca i64, align 8
  %5 = alloca i32, align 4
  store %struct.TYPE_7__* %0, %struct.TYPE_7__** %3, align 8
  store i64 %1, i64* %4, align 8
  %6 = load i64, i64* %4, align 8
  %7 = load i64, i64* @STATUS_PENDING, align 8
  %8 = icmp ne i64 %6, %7
  br i1 %8, label %9, label %22

9:                                                ; preds = %2
  %10 = load i64, i64* %4, align 8
  %11 = load %struct.TYPE_7__*, %struct.TYPE_7__** %3, align 8
  %12 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %11, i32 0, i32 0
  %13 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %12, i32 0, i32 0
  store i64 %10, i64* %13, align 8
  %14 = call i32 @IoAcquireCancelSpinLock(i32* %5)
  %15 = load %struct.TYPE_7__*, %struct.TYPE_7__** %3, align 8
  %16 = call i32 @IoSetCancelRoutine(%struct.TYPE_7__* %15, i32* null)
  %17 = load i32, i32* %5, align 4
  %18 = call i32 @IoReleaseCancelSpinLock(i32 %17)
  %19 = load %struct.TYPE_7__*, %struct.TYPE_7__** %3, align 8
  %20 = load i32, i32* @IO_NETWORK_INCREMENT, align 4
  %21 = call i32 @IoCompleteRequest(%struct.TYPE_7__* %19, i32 %20)
  br label %22

22:                                               ; preds = %9, %2
  %23 = load i64, i64* %4, align 8
  ret i64 %23
}

declare dso_local i32 @IoAcquireCancelSpinLock(i32*) #1

declare dso_local i32 @IoSetCancelRoutine(%struct.TYPE_7__*, i32*) #1

declare dso_local i32 @IoReleaseCancelSpinLock(i32) #1

declare dso_local i32 @IoCompleteRequest(%struct.TYPE_7__*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
